tests/errors/semantic/E004_mod_a.zy
# E004_mod_a {
    <# ./E004_mod_b <= b

    #> { fn_a }

    fn_a() { <~ b::fn_b() }
}
